--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <oauth.version>2.3.5.RELEASE</oauth.version>
         <jwt.version>1.0.10.RELEASE</jwt.version>
         <swagger.version>2.9.2</swagger.version>
+        <!--<swagger.version>1.5.18</swagger.version>-->
         <oauth-autoconfig.version>2.1.3.RELEASE</oauth-autoconfig.version>
 
         <!-- util -->
@@ -139,13 +140,26 @@
     </dependencies>
 
     <build>
-        <finalName>oauth-resource-server-legacy-1</finalName>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
+        <finalName>resource-server</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <addResources>true</addResources>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <nonFilteredFileExtensions>
+                        <nonFilteredFileExtension>jks</nonFilteredFileExtension>
+                    </nonFilteredFileExtensions>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
