--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ logging.level.org=INFO
 
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/oauth2_app?ssl.mode=disable&createDatabaseIfNotExist=true
-#spring.datasource.url=jdbc:postgresql://postgres:5432/oauth2_app?ssl.mode=disable&createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/oauth2_app?ssl.mode=disable&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:postgresql://postgres:5432/oauth2_app?ssl.mode=disable&createDatabaseIfNotExist=true
 spring.datasource.username=postgres
 spring.datasource.password=nicolas2011
 spring.datasource.driver-class-name=org.postgresql.Driver
